Sat Sep 01 14:53:22 2001  George Lebl <jirka@5z.com>

	* AUTHORS, docs/gdmconfig/C/gdmconfig.sgml:  Updated trevors email

Sat Sep 01 07:00:52 2001  George Lebl <jirka@5z.com>

	* daemon/xdmcp.c: the decline messages were switched still.  I've
	  been up too late

Sat Sep 01 05:31:07 2001  George Lebl <jirka@5z.com>

	* Release 2.2.4.1

Sat Sep 01 05:29:31 2001  George Lebl <jirka@5z.com>

	* daemon/xdmcp.[ch], daemon/choose.c:  Fix decline strings, and
	  make the MANAGED_FORWARD work if the origin address is local.

Sat Sep 01 04:15:38 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.h, daemon/xdmcp.c, daemon/choose.[ch]: Change the gdm
	  extension protocol, the MANAGED_FORWARD passes address of origin
	  rather then hostname of self.  And we now handle the message
	  correctly.  Also on DECLINE, send a descriptive english string
	  to aid in debugging XDMCP setup.

	* configure.in: raise version

	* config/gdm.conf.in: add the DisplaysPerHost default

Sat Sep 01 00:47:36 2001  George Lebl <jirka@5z.com>

	* daemon/xdmcp.c, daemon/gdm.[ch], daemon/server.c: Implement
	  DisplaysPerHost which was documented so it should have worked
	  in the first place

	* daemon/xdmcp.c, daemon/server.c, daemon/auth.c, daemon/gdm.c,
	  daemon/choose.c, daemon/cookie.c, daemon/display.c, daemon/slave.c,
	  gui/gdmlogin.c: fix some memleaks, none really dangerous

	* daemon/xdmcp.c: messages such as status information shouldn't be
	  translated.  Because they go over a wire with no specification of
	  charset or language.

	* gui/gdmlogin.c: Fix broken "session don't exist wanna save new one"
	  message

	* daemon/gdm.c: Make sure static display numbers are unique.
	  and fix a possible crash in flexible server code

	* docs/C/gdm.sgml: a small update

	* gui/gdmflexiserver.c: Add -a (--authenticate) command so that
	  when using the --command option we can auth first, useful for
	  testing.

Fri Aug 31 20:22:33 2001  George Lebl <jirka@5z.com>
